--- a/index.html
+++ b/index.html
@@ -215,6 +215,62 @@
             <p>We reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the updated Privacy Policy on the Apps. Your continued use of the Apps after any changes to this Privacy Policy will constitute your acceptance of such changes.</p>
         </div>
 
+        <h1>Terms of Service</h1>
+        <p>By downloading or using our apps, you agree to these terms. Please read them carefully.</p>
+
+        <div class="app-section">
+            <h2>1. Acceptance of Terms</h2>
+            <p>By accessing and using Cinebud, Wrist Jester, or Eggsplore ("our apps"), you accept and agree to be bound by these Terms of Service.</p>
+
+            <h2>2. App-Specific Terms</h2>
+            
+            <h3>Eggsplore</h3>
+            <ul>
+                <li>Premium Subscription Terms:
+                    <ul>
+                        <li>Monthly subscription: 30-day access to premium features</li>
+                        <li>Annual subscription: 365-day access to premium features</li>
+                        <li>Subscription automatically renews unless turned off at least 24 hours before the current period ends</li>
+                        <li>Payment will be charged to your Apple ID account</li>
+                        <li>Manage subscriptions through your Apple ID account settings</li>
+                    </ul>
+                </li>
+                <li>User Content: You are responsible for any content you post through the app</li>
+                <li>Location Services: Required for core functionality</li>
+            </ul>
+
+            <h3>Cinebud</h3>
+            <ul>
+                <li>Movie ratings and reviews must comply with community guidelines</li>
+                <li>User-generated content should be respectful and relevant</li>
+            </ul>
+
+            <h3>Wrist Jester</h3>
+            <ul>
+                <li>Joke content is provided through third-party API</li>
+                <li>Notification preferences can be managed through app settings</li>
+            </ul>
+
+            <h2>3. User Responsibilities</h2>
+            <ul>
+                <li>You must provide accurate information when required</li>
+                <li>You are responsible for maintaining the security of your account</li>
+                <li>You agree not to misuse or abuse our services</li>
+            </ul>
+
+            <h2>4. Intellectual Property</h2>
+            <p>All content and functionality in our apps are owned by us and protected by copyright laws.</p>
+
+            <h2>5. Termination</h2>
+            <p>We reserve the right to terminate or suspend access to our services for violations of these terms.</p>
+
+            <h2>6. Disclaimer of Warranties</h2>
+            <p>Our services are provided "as is" without any warranties, express or implied.</p>
+
+            <h2>7. Limitation of Liability</h2>
+            <p>We shall not be liable for any indirect, incidental, special, consequential, or punitive damages.</p>
+        </div>
+
         <div class="footer">
             <p>Thank you for using our apps!</p>
         </div>
