--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
                     <li>Subscription automatically renews unless auto-renewal is turned off at least 24 hours before the end of the current period</li>
                     <li>Your account will be charged for renewal within 24 hours prior to the end of the current period</li>
                     <li>You can manage and cancel your subscriptions by going to your account settings on the App Store after purchase</li>
-                    <li>Any unused portion of a free trial period will be forfeited when purchasing a subscription</li>
                 </ul>
             </div>
         </div>
@@ -228,8 +227,8 @@
             <ul>
                 <li>Premium Subscription Terms:
                     <ul>
-                        <li>Monthly subscription: 30-day access to premium features</li>
-                        <li>Annual subscription: 365-day access to premium features</li>
+                        <li>Monthly subscription: 30-day access to premium features ($1.99/month)</li>
+                        <li>Annual subscription: 365-day access to premium features ($14.99/year, Save 37%)</li>
                         <li>Subscription automatically renews unless turned off at least 24 hours before the current period ends</li>
                         <li>Payment will be charged to your Apple ID account</li>
                         <li>Manage subscriptions through your Apple ID account settings</li>
