--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support & Privacy Policy - Pathsight, Wrist Jester & Eggsplore</title>
+    <title>Support & Privacy Policy - Pathsight, Resume Radar, Wrist Jester & Eggsplore</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -124,6 +124,54 @@
         </div>
 
         <div class="app-section">
+    <h2>Resume Radar FAQs:</h2>
+    <p>Frequently Asked Questions (FAQs):</p>
+    <ol>
+        <li>
+            <h2>What is Resume Radar?</h2>
+            <p>Resume Radar is a Chrome extension that uses AI to analyze your resume against job descriptions from popular job sites, providing match percentages and improvement suggestions.</p>
+        </li>
+        <li>
+            <h2>How do the subscriptions work?</h2>
+            <p>Resume Radar offers:
+               • Free trial: 10 analyses per day for 7 days
+               • Pro subscription ($4.99/month): 30 analyses per day</p>
+        </li>
+        <li>
+            <h2>How is my data handled?</h2>
+            <p>Your resume is stored locally in your browser. Job descriptions and resumes are only sent temporarily to our secure server for AI analysis and are never permanently stored.</p>
+        </li>
+        <li>
+            <h2>How do I use the extension?</h2>
+            <p>Visit any supported job site (LinkedIn, Indeed, etc.), open the extension on a job posting page, and click analyze. The AI will compare your resume to the job description automatically.</p>
+        </li>
+        <li>
+            <h2>Can I save my analysis results?</h2>
+            <p>Yes, you can download your analysis results as text files. Analysis history is not stored on our servers.</p>
+        </li>
+        <li>
+            <h2>Which job sites are supported?</h2>
+            <p>We support major job sites including LinkedIn, Indeed, ZipRecruiter, Dice, Built In, Glassdoor, Monster, CareerBuilder, and many others. The extension automatically detects job descriptions on these sites.</p>
+        </li>
+    </ol>
+
+    <div style="background-color: #e9ecef; padding: 15px; margin: 20px 0; border-left: 4px solid #d6336c;">
+        <h2>Subscription Information</h2>
+        <p>Resume Radar offers:</p>
+        <ul>
+            <li><strong>Free Trial:</strong> 7 days with 10 analyses per day</li>
+            <li><strong>Pro Monthly:</strong> $4.99/month for 30 analyses per day</li>
+        </ul>
+        <p>Important subscription terms:</p>
+        <ul>
+            <li>Payment will be charged to your Chrome Web Store account at confirmation of purchase</li>
+            <li>Subscription automatically renews unless auto-renewal is turned off</li>
+            <li>You can manage your subscription through the Chrome Web Store</li>
+        </ul>
+    </div>
+</div>
+
+        <div class="app-section">
             <h2>Eggsplore FAQs:</h2>
             <p>Frequently Asked Questions (FAQs):</p>
             <ol>
@@ -211,7 +259,7 @@
         </div>
 
         <h1>Privacy Policy</h1>
-        <p>This Privacy Policy applies to Pathsight, Wrist Jester, and Eggsplore ("we," "us," or "our") and explains how we collect, use, share, and protect information in relation to our mobile applications (the "Apps").</p>
+        <p>This Privacy Policy applies to Pathsight, Resume Radar, Wrist Jester, and Eggsplore ("we," "us," or "our") and explains how we collect, use, share, and protect information in relation to our mobile applications and browser extensions (the "Apps").</p>
         <p>By using any of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
         
         <h2>Information Collection and Use</h2>
@@ -245,6 +293,7 @@
         <p>Our apps utilize various third-party services:</p>
         <ul>
             <li>Pathsight: DeepSeek API (for AI-powered route generation), OpenWeather API (for weather information), Apple Maps (for navigation)</li>
+            <li>Resume Radar: Google's Gemini API (for AI-powered resume analysis)</li>
             <li>Eggsplore: Firebase (authentication, storage, database), Apple's StoreKit (for in-app purchases)</li>
             <li>Wrist Jester: Official Joke API</li>
         </ul>
@@ -278,6 +327,22 @@
                 <li>Location Services: Required for core functionality including route planning and weather information</li>
                 <li>Weather Data: Weather information is provided by OpenWeather API and should be used as reference only</li>
             </ul>
+
+            <h3>Resume Radar</h3>
+<ul>
+    <li>Premium Subscription Terms:
+        <ul>
+            <li>Free trial: 7-day access with 10 analyses per day</li>
+            <li>Pro subscription: Monthly access with 30 analyses per day ($4.99/month)</li>
+            <li>Subscription automatically renews unless turned off</li>
+            <li>Payment will be charged to your Chrome Web Store account</li>
+            <li>Manage subscriptions through Chrome Web Store settings</li>
+        </ul>
+    </li>
+    <li>AI-Generated Content: Analysis and suggestions are provided as guidance only</li>
+    <li>Data Privacy: Resume content is stored locally, and no personal data is permanently stored on servers</li>
+    <li>Job Site Access: Required for automatic job description extraction from supported job sites</li>
+</ul>
 
             <h3>Eggsplore</h3>
             <ul>
