--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </li>
                 <li>
                     <h2>How accurate is the AI-generated content?</h2>
-                    <p>While our AI (powered by DeepSeek) strives for accuracy, all suggestions should be used as guidance only. Always verify critical information, especially regarding road conditions, business hours, or travel restrictions. The AI provides helpful insights but should not be your sole source of navigation information.</p>
+                    <p>While our AI (powered by Google's Gemini API) strives for accuracy, all suggestions should be used as guidance only. Always verify critical information, especially regarding road conditions, business hours, or travel restrictions. The AI provides helpful insights but should not be your sole source of navigation information. All AI-generated content must be clearly attributed as such when shared.</p>
                 </li>
                 <li>
                     <h2>What is "Main route only" mode?</h2>
@@ -102,7 +102,7 @@
                 </li>
                 <li>
                     <h2>How is my privacy protected when using the AI features?</h2>
-                    <p>While we use DeepSeek's API for route generation, we only share the minimum necessary information (such as start/end points and preferences). Your routes are stored securely in our system, but interactions with DeepSeek's API are subject to their privacy policy and data handling practices. We encourage you to review DeepSeek's privacy policy for more information about how they handle data.</p>
+                    <p>While we use Google's Gemini API for route generation, we only share the minimum necessary information (such as start/end points and preferences). Your routes are stored securely in our system, but interactions with Google's Gemini API are subject to their privacy policy and data handling practices. We encourage you to review Google's AI privacy policy at ai.google.dev/terms for more information about how they handle data. We monitor API usage for abuse and may suspend access to users who violate Google's Acceptable Use Policy.</p>
                 </li>
             </ol>
 
@@ -292,7 +292,7 @@
         <h2>Third-Party Services</h2>
         <p>Our apps utilize various third-party services:</p>
         <ul>
-            <li>Pathsight: DeepSeek API (for AI-powered route generation), OpenWeather API (for weather information), Apple Maps (for navigation)</li>
+            <li>Pathsight: Google Gemini API (for AI-powered route generation), OpenWeather API (for weather information), Apple Maps (for navigation). Use of Gemini API features is subject to Google's AI Terms of Service and Acceptable Use Policy.</li>
             <li>Resume Radar: Google's Gemini API (for AI-powered resume analysis)</li>
             <li>Eggsplore: Firebase (authentication, storage, database), Apple's StoreKit (for in-app purchases)</li>
             <li>Wrist Jester: Official Joke API</li>
