--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support & Privacy Policy - Pathsight, Resume Radar, Wrist Jester & Eggsplore</title>
+    <title>Support & Privacy Policy - Pathsight, Dot Crush & Eggsplore</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -124,52 +124,49 @@
         </div>
 
         <div class="app-section">
-    <h2>Resume Radar FAQs:</h2>
-    <p>Frequently Asked Questions (FAQs):</p>
-    <ol>
-        <li>
-            <h2>What is Resume Radar?</h2>
-            <p>Resume Radar is a Chrome extension that uses AI to analyze your resume against job descriptions from popular job sites, providing match percentages and improvement suggestions.</p>
-        </li>
-        <li>
-            <h2>How do the subscriptions work?</h2>
-            <p>Resume Radar offers:
-               • Free trial: 10 analyses per day for 7 days
-               • Pro subscription ($4.99/month): 30 analyses per day</p>
-        </li>
-        <li>
-            <h2>How is my data handled?</h2>
-            <p>Your resume is stored locally in your browser. Job descriptions and resumes are only sent temporarily to our secure server for AI analysis and are never permanently stored.</p>
-        </li>
-        <li>
-            <h2>How do I use the extension?</h2>
-            <p>Visit any supported job site (LinkedIn, Indeed, etc.), open the extension on a job posting page, and click analyze. The AI will compare your resume to the job description automatically.</p>
-        </li>
-        <li>
-            <h2>Can I save my analysis results?</h2>
-            <p>Yes, you can download your analysis results as text files. Analysis history is not stored on our servers.</p>
-        </li>
-        <li>
-            <h2>Which job sites are supported?</h2>
-            <p>We support major job sites including LinkedIn, Indeed, ZipRecruiter, Dice, Built In, Glassdoor, Monster, CareerBuilder, and many others. The extension automatically detects job descriptions on these sites.</p>
-        </li>
-    </ol>
+            <h2>Dot Crush FAQs:</h2>
+            <p>Frequently Asked Questions (FAQs):</p>
+            <ol>
+                <li>
+                    <h2>What is Dot Crush?</h2>
+                    <p>Dot Crush is a fast-paced arcade game where players tap glowing dots to score points. Test your reflexes and compete on global and state-specific leaderboards!</p>
+                </li>
+                <li>
+                    <h2>How do I play?</h2>
+                    <p>Simply tap the glowing dots as they appear on screen. Each game lasts 30 seconds - try to score as many points as possible!</p>
+                </li>
+                <li>
+                    <h2>How does the leaderboard work?</h2>
+                    <p>We maintain both global and state-specific leaderboards. Your location is only used to place your score on the state leaderboard. You can view both leaderboards by tapping the trophy icon.</p>
+                </li>
+                <li>
+                    <h2>How do I remove ads?</h2>
+                    <p>You can remove ads with a one-time purchase. Once purchased, you'll never see ads again. If you've previously purchased ad removal, use the "Restore Purchases" button to restore your purchase on a new device.</p>
+                </li>
+                <li>
+                    <h2>Why was my name rejected?</h2>
+                    <p>To maintain a family-friendly environment, we filter display names for inappropriate content. If your name was rejected, please choose a different name that doesn't contain any inappropriate words.</p>
+                </li>
+                <li>
+                    <h2>How is my privacy protected?</h2>
+                    <p>We only collect your display name and, if you allow it, your state location for the leaderboard. No personal information is required to play the game.</p>
+                </li>
+            </ol>
 
-    <div style="background-color: #e9ecef; padding: 15px; margin: 20px 0; border-left: 4px solid #d6336c;">
-        <h2>Subscription Information</h2>
-        <p>Resume Radar offers:</p>
-        <ul>
-            <li><strong>Free Trial:</strong> 7 days with 10 analyses per day</li>
-            <li><strong>Pro Monthly:</strong> $4.99/month for 30 analyses per day</li>
-        </ul>
-        <p>Important subscription terms:</p>
-        <ul>
-            <li>Payment will be charged to your Chrome Web Store account at confirmation of purchase</li>
-            <li>Subscription automatically renews unless auto-renewal is turned off</li>
-            <li>You can manage your subscription through the Chrome Web Store</li>
-        </ul>
-    </div>
-</div>
+            <div style="background-color: #e9ecef; padding: 15px; margin: 20px 0; border-left: 4px solid #d6336c;">
+                <h2>In-App Purchase Information</h2>
+                <p>Dot Crush offers a single in-app purchase:</p>
+                <ul>
+                    <li><strong>Remove Ads:</strong> One-time purchase of $0.99 to permanently remove all advertisements</li>
+                </ul>
+                <p>Important purchase terms:</p>
+                <ul>
+                    <li>Payment will be charged to your Apple ID account at confirmation of purchase</li>
+                    <li>This is a one-time purchase, not a subscription</li>
+                    <li>Purchase can be restored on other devices using the "Restore Purchases" button</li>
+                </ul>
+            </div>
+        </div>
 
         <div class="app-section">
             <h2>Eggsplore FAQs:</h2>
@@ -226,44 +223,18 @@
             </div>
         </div>
 
-        <div class="app-section">
-            <h2>Wrist Jester FAQs:</h2>
-            <p>Frequently Asked Questions (FAQs):</p>
-            <ol>
-                <li>
-                    <h2>How do I set the number of jokes I receive per day?</h2>
-                    <p>To set the number of jokes you receive per day, open the Wrist Jester app, tap on the settings icon, and adjust the frequency slider from 0 to 10 jokes per day.</p>
-                </li>
-                <li>
-                    <h2>How do I get an instant joke?</h2>
-                    <p>To get an instant joke, simply open the Wrist Jester app and tap the "Tap to get a joke!" button on the main screen. You'll receive a joke right away.</p>
-                </li>
-                <li>
-                    <h2>What is the source of the jokes?</h2>
-                    <p>The jokes in Wrist Jester are provided by the <a href="https://official-joke-api.appspot.com/">Official Joke API</a>. We use this API to bring you a variety of random jokes throughout the day.</p>
-                </li>
-                <li>
-                    <h2>How do I stop receiving jokes?</h2>
-                    <p>To stop receiving jokes, go to the settings page and set the frequency to 0. This will disable the notifications for daily jokes.</p>
-                </li>
-                <li>
-                    <h2>How do I access the Terms and Conditions?</h2>
-                    <p>You can access the Terms and Conditions by tapping the "Terms and Conditions" button in the Info section of the Wrist Jester app.</p>
-                </li>
-            </ol>
-        </div>
-
         <div class="contact">
             <h2>Contact Us:</h2>
             <p>If you have any further questions or encounter any issues while using any of our apps, please don't hesitate to contact us. You can reach us via email at heverlym@gmail.com. We're here to help and will do our best to assist you as quickly as possible.</p>
         </div>
 
         <h1>Privacy Policy</h1>
-        <p>This Privacy Policy applies to Pathsight, Resume Radar, Wrist Jester, and Eggsplore ("we," "us," or "our") and explains how we collect, use, share, and protect information in relation to our mobile applications and browser extensions (the "Apps").</p>
-        <p>By using any of the Apps, you agree to the collection and use of information in accordance with this Privacy Policy.</p>
+        <p>Last updated: February 11, 2025</p>
         
+        <p>We take your privacy seriously. This Privacy Policy explains how we collect, use, and protect your information when you use our apps.</p>
+
         <h2>Information Collection and Use</h2>
-        <p>For Wrist Jester, we collect minimal non-personal information. For Pathsight and Eggsplore, we collect:</p>
+        <p>For Dot Crush, we collect minimal non-personal information. For Pathsight and Eggsplore, we collect:</p>
         <ul>
             <li>Phone number (for Eggsplore account verification)</li>
             <li>Name (for Eggsplore user profile)</li>
@@ -293,9 +264,8 @@
         <p>Our apps utilize various third-party services:</p>
         <ul>
             <li>Pathsight: Google Gemini API (for AI-powered route generation), OpenWeather API (for weather information), Apple Maps (for navigation). Use of Gemini API features is subject to Google's AI Terms of Service and Acceptable Use Policy.</li>
-            <li>Resume Radar: Google's Gemini API (for AI-powered resume analysis)</li>
             <li>Eggsplore: Firebase (authentication, storage, database), Apple's StoreKit (for in-app purchases)</li>
-            <li>Wrist Jester: Official Joke API</li>
+            <li>Dot Crush: Firebase (database)</li>
         </ul>
 
         <div class="privacy">
@@ -308,7 +278,7 @@
 
         <div class="app-section">
             <h2>1. Acceptance of Terms</h2>
-            <p>By accessing and using Pathsight, Wrist Jester, or Eggsplore ("our apps"), you accept and agree to be bound by these Terms of Service.</p>
+            <p>By accessing and using Pathsight, Dot Crush, or Eggsplore ("our apps"), you accept and agree to be bound by these Terms of Service.</p>
 
             <h2>2. App-Specific Terms</h2>
             
@@ -328,21 +298,18 @@
                 <li>Weather Data: Weather information is provided by OpenWeather API and should be used as reference only</li>
             </ul>
 
-            <h3>Resume Radar</h3>
-<ul>
-    <li>Premium Subscription Terms:
-        <ul>
-            <li>Free trial: 7-day access with 10 analyses per day</li>
-            <li>Pro subscription: Monthly access with 30 analyses per day ($4.99/month)</li>
-            <li>Subscription automatically renews unless turned off</li>
-            <li>Payment will be charged to your Chrome Web Store account</li>
-            <li>Manage subscriptions through Chrome Web Store settings</li>
-        </ul>
-    </li>
-    <li>AI-Generated Content: Analysis and suggestions are provided as guidance only</li>
-    <li>Data Privacy: Resume content is stored locally, and no personal data is permanently stored on servers</li>
-    <li>Job Site Access: Required for automatic job description extraction from supported job sites</li>
-</ul>
+            <h3>Dot Crush</h3>
+            <ul>
+                <li>In-App Purchase Terms:
+                    <ul>
+                        <li>Remove Ads: One-time purchase of $0.99 to permanently remove all advertisements</li>
+                        <li>Payment will be charged to your Apple ID account at confirmation of purchase</li>
+                        <li>This is a one-time purchase, not a subscription</li>
+                        <li>Purchase can be restored on other devices using the "Restore Purchases" button</li>
+                    </ul>
+                </li>
+                <li>Leaderboard: We maintain both global and state-specific leaderboards. Your location is only used to place your score on the state leaderboard.</li>
+            </ul>
 
             <h3>Eggsplore</h3>
             <ul>
@@ -357,12 +324,6 @@
                 </li>
                 <li>User Content: You are responsible for any content you post through the app</li>
                 <li>Location Services: Required for core functionality</li>
-            </ul>
-
-            <h3>Wrist Jester</h3>
-            <ul>
-                <li>Joke content is provided through third-party API</li>
-                <li>Notification preferences can be managed through app settings</li>
             </ul>
 
             <h2>3. User Responsibilities</h2>
