--- a/PathsightAd/index.html
+++ b/PathsightAd/index.html
@@ -384,10 +384,10 @@
             <h1 class="fade-in fade-in-1">Navigate Like a Local</h1>
             <p class="fade-in fade-in-2">Pathsight uses AI to create personalized routes with insider tips, local knowledge, and real-time weather updates for travelers who want more than just directions.</p>
             <div class="fade-in fade-in-3">
-                <a href="https://apps.apple.com" class="app-store-btn">Download on the App Store</a>
+                <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Download on the App Store</a>
             </div>
             <div style="margin-top: 50px;">
-                <img src="https://placehold.co/600x400/147579/FFFFFF/png?text=Pathsight+App+Screenshot" alt="Pathsight App Screenshot" style="max-width: 100%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
+                <img src="stragmascot.png" alt="Pathsight App Mascot" style="max-width: 100%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
             </div>
         </div>
     </section>
@@ -471,7 +471,7 @@
                         <li>Basic route information</li>
                         <li>Weather information</li>
                     </ul>
-                    <a href="https://apps.apple.com" class="app-store-btn">Get Started</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Get Started</a>
                 </div>
                 <div class="pricing-card popular fade-in fade-in-2">
                     <h3>Basic</h3>
@@ -483,7 +483,7 @@
                         <li>Weather information</li>
                         <li>All preferences & customizations</li>
                     </ul>
-                    <a href="https://apps.apple.com" class="app-store-btn">Choose Basic</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Choose Basic</a>
                 </div>
                 <div class="pricing-card fade-in fade-in-3">
                     <h3>Pro</h3>
@@ -497,7 +497,7 @@
                         <li>All preferences & customizations</li>
                         <li>Priority support</li>
                     </ul>
-                    <a href="https://apps.apple.com" class="app-store-btn">Choose Pro</a>
+                    <a href="https://apps.apple.com/us/app/pathsight-ai-travel-agent/id6740884888" class="app-store-btn">Choose Pro</a>
                 </div>
             </div>
         </div>
