--- a/PathsightAd/index.html
+++ b/PathsightAd/index.html
@@ -538,7 +538,7 @@
             </div>
             <div class="copyright">
                 <p>&copy; 2025 Pathsight. All rights reserved.</p>
-                <p><a href="#" style="color: #888;">Privacy Policy</a> | <a href="#" style="color: #888;">Terms of Service</a></p>
+                <p><a href="https://mhev.github.io/Pathsight/" style="color: #888;">Privacy Policy</a> | <a href="https://mhev.github.io/Pathsight/" style="color: #888;">Terms of Service</a></p>
             </div>
         </div>
     </footer>
