--- a/EggsploreAd/index.html
+++ b/EggsploreAd/index.html
@@ -388,7 +388,7 @@
                 <a href="https://apps.apple.com/us/app/eggsplore/id6739508309" class="app-store-btn">Download on the App Store</a>
             </div>
             <div style="margin-top: 50px;">
-                <img src="egg-app.png" alt="Eggsplore App Screenshots" style="max-width: 100%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
+                <img src="chicky.jpeg" alt="Eggsplore App Screenshots" style="max-width: 50%; border-radius: 20px; box-shadow: 0 20px 40px rgba(0,0,0,0.3);" class="fade-in fade-in-4">
             </div>
         </div>
     </section>
@@ -540,7 +540,7 @@
             </div>
             <div class="copyright">
                 <p>&copy; 2025 Eggsplore. All rights reserved.</p>
-                <p><a href="#" style="color: #888;">Privacy Policy</a> | <a href="#" style="color: #888;">Terms of Service</a></p>
+                <p><a href="https://mhev.github.io/Eggsplore/" style="color: #888;">Privacy Policy</a> | <a href="https://mhev.github.io/Eggsplore/" style="color: #888;">Terms of Service</a></p>
             </div>
         </div>
     </footer>
