--- a/RR/index.html
+++ b/RR/index.html
@@ -4,32 +4,33 @@
   <title>Welcome to Resume Radar</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    body {
-      min-width: 450px;
-      min-height: 600px;
-      width: 450px;
+    html, body {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
       background-color: #121212;
       color: #ffffff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
       font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .welcome-container {
-      width: 100%;
+      width: 90%;
       max-width: 400px;
       text-align: center;
-      padding: 20px;
+      padding: 30px;
       background-color: #1a1a1a;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      margin: 0 auto;
     }
 
     .logo {
-      width: 80px;
-      height: 80px;
+      width: 100px;
+      height: auto;
       margin-bottom: 20px;
     }
 
@@ -84,12 +85,6 @@
       color: white;
     }
 
-    .apple-btn {
-      background-color: #2a2d3e;
-      color: white;
-      border: 1px solid #444;
-    }
-
     .login-link {
       margin-top: 20px;
       color: #8a91b4;
@@ -114,7 +109,7 @@
 </head>
 <body>
   <div class="welcome-container">
-    <img src="icons/logo128.png" alt="Resume Radar Logo" class="logo">
+    <img src="icons/RRlogo.png" alt="Resume Radar Logo" class="logo">
     <h1>Welcome to Resume Radar</h1>
     <p class="subtitle">Sign up to get the most out of your job search</p>
 
@@ -139,17 +134,6 @@
       </svg>
       Continue with Google
     </button>
-    
-    <button id="emailLoginBtn" class="auth-button apple-btn">
-      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#fff">
-        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-      </svg>
-      Continue with Email
-    </button>
-
-    <div class="login-link">
-      Already have an account? <a href="#" id="loginLink">Log in</a>
-    </div>
 
     <div class="privacy-note">
       <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="#8a91b4">
@@ -159,4 +143,4 @@
     </div>
   </div>
 </body>
-</html>
+</html> 
