--- a/RR/index.html
+++ b/RR/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="welcome-container">
-    <img src="RRmascot.jpeg" alt="Resume Radar Logo" class="logo">
+    <img src="RRmax.jpeg" alt="Resume Radar Logo" class="logo">
     <h1>Welcome to Resume Radar</h1>
     <p class="subtitle">Sign up to get the most out of your job search</p>
 
