--- a/RR/index.html
+++ b/RR/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="welcome-container">
-    <img src="RRmax.jpeg" alt="Resume Radar Logo" class="logo">
+    <img src="RRlogo.png" alt="Resume Radar Logo" class="logo">
     <h1>Welcome to Resume Radar</h1>
     <p class="subtitle">Sign up to get the most out of your job search</p>
 
@@ -120,11 +120,7 @@
       </div>
       <div class="stat">
         <div class="stat-number">14</div>
-        <div class="stat-label">Day Pro Trial</div>
-      </div>
-      <div class="stat">
-        <div class="stat-number">5★</div>
-        <div class="stat-label">User Rating</div>
+        <div class="stat-label">Days Full Access</div>
       </div>
     </div>
 
