--- a/RRPolicy/index.html
+++ b/RRPolicy/index.html
@@ -90,11 +90,11 @@
         </li>
         <li>
           <h2>How accurate is the AI analysis?</h2>
-          <p>Our AI uses advanced language models to analyze the match between your resume and job descriptions. While it's highly effective at identifying relevant keywords and suggesting improvements, we recommend using it as a complementary tool to your own judgment and industry knowledge.</p>
+          <p>Our AI uses Google Gemini Flash 2.0 to analyze the match between your resume and job descriptions. While it's highly effective at identifying relevant keywords and suggesting improvements, we are not responsible for what it may produce. The extension's objective is to help improve your resume, but we cannot promise interviews or employment as a result of using Resume Radar.</p>
         </li>
         <li>
           <h2>Can I generate an optimized resume?</h2>
-          <p>Yes, the Pro version allows you to generate a completely optimized version of your resume tailored to specific job descriptions. You can then download this as plain text, PDF, or DOCX.</p>
+          <p>No, Resume Radar does not generate new resumes. The Pro version provides tailored suggestions to improve your existing resume based on the job description. You can view these recommendations and download them as a .txt file for reference.</p>
         </li>
         <li>
           <h2>How is my resume data stored and used?</h2>
@@ -122,10 +122,10 @@
         </ul>
         <p>Important subscription terms:</p>
         <ul>
-          <li>Payment will be charged to your payment method at confirmation of purchase</li>
+          <li>Payment is processed securely through Polar, not the Chrome Web Store</li>
           <li>The Pro Plan is a one-time purchase that provides 14 days of access</li>
-          <li>After 14 days, you'll revert to the Free tier (3 analyses per month) unless you purchase another Pro plan</li>
-          <li>You can manage your subscription through your Chrome Web Store account</li>
+          <li>After 14 days, you'll revert to the Free tier (3 analyses per month)</li>
+          <li>Subscriptions do NOT auto-renew - you must manually repurchase if you wish to continue with Pro access</li>
         </ul>
       </div>
     </div>
@@ -136,7 +136,7 @@
     </div>
     
     <h1>Privacy Policy 🔒</h1>
-    <p>Last updated: May 1, 2023</p>
+    <p>Last updated: March 26, 2025</p>
     <p>We take your privacy seriously. This Privacy Policy explains how we collect, use, and protect your information when you use Resume Radar.</p>
     <h2>Information Collection and Use</h2>
     <p>We collect the following information when you use Resume Radar:</p>
@@ -165,7 +165,7 @@
     <p>Resume Radar uses various third-party services:</p>
     <ul>
       <li>Firebase (for data storage and authentication)</li>
-      <li>GPT API (for AI-powered resume analysis)</li>
+      <li>Google Gemini Flash 2.0 (for AI-powered resume analysis)</li>
       <li>Polar (for payment processing)</li>
       <li>Google Analytics (for usage statistics)</li>
     </ul>
@@ -186,11 +186,19 @@
           <ul>
             <li>Free tier: Limited to 3 resume analyses per month</li>
             <li>Pro plan: 14 days of full access for $14.99</li>
-            <li>Payment will be charged at confirmation of purchase</li>
+            <li>Payment is processed through Polar</li>
             <li>The Pro plan is a one-time purchase that expires after 14 days</li>
+            <li>Subscriptions do NOT auto-renew and must be manually repurchased</li>
           </ul>
         </li>
-        <li>AI-Generated Content: Analysis results and suggestions are provided as guidance only. We do not guarantee job interviews or employment outcomes.</li>
+        <li>AI Technology:
+          <ul>
+            <li>Resume Radar uses Google Gemini Flash 2.0 AI technology</li>
+            <li>We are not responsible for AI-generated content or responses</li>
+            <li>Analysis results and suggestions are provided as guidance only</li>
+            <li>We do not guarantee job interviews, employment outcomes, or specific improvements to interview success rates</li>
+          </ul>
+        </li>
         <li>Resume Data: You retain all rights to your resume content. By using our service, you grant us a limited license to analyze and process your resume for the purpose of providing our service.</li>
       </ul>
       <h2>3. User Responsibilities</h2>
@@ -205,7 +213,7 @@
       <h2>5. Termination</h2>
       <p>We reserve the right to terminate or suspend access to our services for violations of these terms.</p>
       <h2>6. Disclaimer of Warranties</h2>
-      <p>Our services are provided "as is" without any warranties, express or implied. We do not guarantee employment outcomes as a result of using our service.</p>
+      <p>Our services are provided "as is" without any warranties, express or implied. We do not guarantee employment outcomes, interview success, or specific improvements to your resume effectiveness as a result of using our service. The AI-powered analysis is provided as guidance only, and we are not responsible for the accuracy, completeness, or usefulness of any AI-generated content.</p>
       <h2>7. Limitation of Liability</h2>
       <p>We shall not be liable for any indirect, incidental, special, consequential, or punitive damages resulting from your use of or inability to use our service.</p>
     </div>
