--- a/RR/index.html
+++ b/RR/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="welcome-container">
-    <img src="RRlogo.png" alt="Resume Radar Logo" class="logo">
+    <img src="RRmax.jpeg" alt="Resume Radar Logo" class="logo">
     <h1>Welcome to Resume Radar</h1>
     <p class="subtitle">Sign up to get the most out of your job search</p>
 
@@ -136,7 +136,7 @@
         <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"/>
       </svg>
       Your data is never shared. No spam messages.
-      <p>By continuing, you agree to the <a href="https://mhev.github.io/RRPolicy" target="_blank" style="color: #8a91b4; text-decoration: underline;">Privacy Policy</a></p>
+      <p>By continuing, you agree to the <a href="https://mhev.github.io/RRPolicy" target="_blank" style="color: #8a91b4; text-decoration: underline;">Privacy Policy</a> and <a href="https://mhev.github.io/RRPolicy" target="_blank" style="color: #8a91b4; text-decoration: underline;">Terms of Service</a></p>
     </div>
   </div>
 </body>
